--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@
 
 osx_image: xcode9
 language: objective-c
-cache: cocoapods
-podfile: Example/Podfile
+cache: 
+  - bundler
+  - cocoapods
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
-- pod install --project-directory=Example --repo-update
+  - bundle install
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/EasySequence.xcworkspace -scheme Test-Release -sdk iphonesimulator11.0 -destination 'platform=iOS Simulator,name=iPhone 6s Plus,OS=11.0' ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+  - fastlane test_and_report
+
+  
