--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,7 @@
 use_frameworks!
 
 target 'Example' do
+    platform :ios, '8.0'
     target 'iOSTest' do
         inherit! :search_paths
         pod 'EasySequence', path: '../'
